[tool.poetry]
name = "pubmed-fetcher-project"
version = "0.1.0"
description = "CLI tool to fetch non-academic pharma/biotech papers from PubMed"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "pubmed_fetcher" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"

[tool.poetry.scripts]
get-papers-list = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
